<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/layout_header"
        layout="@layout/layout_header" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_8dp"
        android:layout_height="@dimen/_60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/_60dp"
        android:background="@color/dark_orange" />

    <LinearLayout
        android:id="@+id/lin_frgt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_header"
        android:layout_marginLeft="@dimen/margin_20"

        android:layout_marginRight="@dimen/margin_20"
        android:layout_toRightOf="@id/view"
        android:orientation="vertical">


        <TextView
            style="@style/MyNormalTextView"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_35" />

        <TextView
            style="@style/MyNormalTextView"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/enter_the_registered_email"
            android:textColor="@color/black" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_70"
            android:theme="@style/MyEditText">

            <EditText
                style="@style/Common_EditText"
                android:hint="@string/email"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/_12dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_fp_submit"
            style="@style/Common_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_70"
            android:background="@drawable/bg_button"
            android:text="Submit"
            android:textColor="@color/white" />


    </LinearLayout>

</RelativeLayout>