<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.activity.MobileVerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_below="@id/layout_header">

        <TextView
            style="@style/MyNormalTextView"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/verify_your_mobile"
            android:textSize="@dimen/_22sp"
            android:textStyle="bold" />


        <TextView
            style="@style/MyMediumTextView"
            android:layout_gravity="center"
            android:padding="@dimen/_10dp"
            android:text="@string/please_verify_otp"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_reg_num"
                style="@style/MyNormalTextView"
                android:layout_centerVertical="true"
                android:text="+61 2569-365-3258"

                />

            <ImageView
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_30dp"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_toRightOf="@id/tv_reg_num"
                android:src="@mipmap/ic_launcher" />

        </RelativeLayout>

        <TextView
            style="@style/MyNormalTextView"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/enter_4_digit_code" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_35dp"
                android:id="@+id/edt_verify_1"
                android:background="@drawable/bcg_edittext"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:nextFocusForward="@id/edt_verify_2"
                />

            <EditText

                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_35dp"
                android:id="@+id/edt_verify_2"
                android:layout_marginLeft="@dimen/_10dp"
                android:background="@drawable/bcg_edittext"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"/>

            <EditText

                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_35dp"
                android:id="@+id/edt_verify_3"
                android:layout_marginLeft="@dimen/_10dp"
                android:background="@drawable/bcg_edittext"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"/>

            <EditText

                android:layout_width="@dimen/_30dp"
                android:layout_height="@dimen/_35dp"
                android:id="@+id/edt_verify_4"
                android:layout_marginLeft="@dimen/_10dp"
                android:background="@drawable/bcg_edittext"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/MyMediumTextView"
                android:text="@string/didnt_recieve_code" />

            <TextView
                android:id="@+id/tv_resend_code"
                style="@style/MyMediumTextView"
                android:layout_marginLeft="@dimen/_5dp"
                android:text="@string/resend_code"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_vrfy_mbl_nxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_10"
            android:background="@drawable/bg_button"
            android:text="Next"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>